<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Translator</string>
    <string name="take_picture">Take Picture</string>
    <string name="welcome_to">Welcome to</string>
    <string name="translator">Translator</string>
    <string name="translation_service_description">A translation service provided by your own Friends</string>
    <string name="login">Login</string>
    <string name="login_to_facebook">Login to Facebook</string>
    <string name="new_message_received">New message received from</string>
    <string name="translate">Translate</string>
    <string name="image_for_translation">Image for translation</string>
    <string name="translation">Translation</string>
    <string name="submit">Submit</string>
</resources>