<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget44"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/translation_image"
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:layout_weight="0.26"
        android:contentDescription="@string/image_for_translation"
        android:scaleType="centerCrop"
        android:src="@drawable/image_loading" />
    
    <TextView
        android:id="@+id/translation_image_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:textColorHighlight="#656565"
        android:textSize="16dp" >
    </TextView>
    
    <ListView
        android:id="@+id/translation_data_list"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_weight="0.00"
        android:drawSelectorOnTop="false"
        android:fadeScrollbars="false"  />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/translation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitTranslation"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>